fixed the top bar, mostly aligned now. I used padding to fix

--- a/static/css/myapp.css
+++ b/static/css/myapp.css
@@ -352,6 +352,7 @@ p.announcement_text{
 ul {
   list-style-type: none;
   padding: 0px;
+  width: 100%;
 }
 
 .navbar-fixed-top {
@@ -369,7 +370,9 @@ ul {
 
 .navbar-brand{
     margin: 0;
-    padding: 0;
+    padding-left: 23%;
+	padding-right: 18.5%;
+	
 }
 
 
